Added mob eggs to tab Removed log spam in the buildscript

--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,8 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
-
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-
             mods {
-                examplemod {
+                moballurgy {
                     source sourceSets.main
                 }
             }
@@ -51,15 +44,8 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
-
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-
             mods {
-                examplemod {
+                moballurgy {
                     source sourceSets.main
                 }
             }
